# NetSentinel-Lab

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/api/: main.py
app/api/routes/: dashboard.py  events.py  health.py  incidents.py  stats.py
app/api/schemas/: events.py  falco.py  incidents.py  stats.py  suricata.py
app/core/: auth.py  config.py  settings.py
app/db/: models.py  session.py
app/services/: correlator.py
app/static/dashboard/: dashboard.css  dashboard.js  index.html
docker/: api.Dockerfile
infra/: docker-compose.yml
lab/sample_events/: falco_samples.json
scripts/: send_sample_events.py
tests/: conftest.py  test_health.py
